# Charm

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/actions/append-buildnum/: action.yml
.github/actions/find-regex/: action.yml
.github/actions/metadata/: action.yml
.github/workflows/: publish-to-pypi.yml  publish-to-testpypi.yml
Charm-Tests/: __main__.py
charm/: __main__.py  main.py
charm/core/: digiview.py  keymap.py
charm/data/: splashes.txt
charm/data/assets/characters/: boyfriend.offsets  dad.xml
charm/data/charts/ch/hopotest/: explanation.txt  notes.chart  song.ini
charm/data/charts/ch/notes/: notes.chart  notes.mid  notes_old.chart  song.ini
charm/data/charts/ch/run_around_the_character_code/: notes.chart
charm/data/charts/ch/soulless5/: song.ini
charm/data/charts/fnf/: helloworld.json  test.json
charm/data/charts/fnf/glitcher/: glitcher.json
charm/data/images/spritesheets/: bfScott.xml  scott.xml
charm/data/subtitle/: crossing_field.ass
charm/data/tests/discord/: discord.sm  discord.ssc
charm/data/tests/soulless5/: notes.chart
charm/game/: loading.py
charm/lib/: abc.py  adobexml.py  anim.py  charm.py  digiview.py  digiwindow.py  discordstatus.py  engine.py  errors.py  keymap.py  logsection.py  oggsound.py  paths.py  settings.py  song.py  spritebucket.py  too_mini_too_mint.py  trackcollection.py  utils.py
charm/lib/debug/: debugmenu.py  overlaycamera.py
charm/lib/gamemodes/: ch.py  fnf.py  fnf2.py  four_key.py  hero.py  osu.py  sm.py  taiko.py
charm/lib/generic/: engine.py  highway.py  modchart.py  results.py  song.py
charm/lib/mint/: __init__.py  element_demo_1.py
charm/objects/: debug_log.py  line_renderer.py  lyric.py  menu.py  newsongmenu.py  song.py  songmenu.py  wiggly_line_renderer.py
charm/views/: TEMPLATE.py  _TEMPLATE.py  cheat.py  credits.py  fnfsong.py  fnfsongmenu.py  fourkeysong.py  fourkeysongmenu.py  herotest.py  linetest.py  mainmenu.py  mint_debug.py  parallaxtest.py  resultsview.py  smtest.py  song.py  songmenu.py  spritetest.py  subtitletest.py  test.py  title.py  visualizer.py
charmtests/: __main__.py  main.py
charmtests/data/: splashes.txt
charmtests/data/audio/: credits.txt
charmtests/data/charts/fnf/: ballistic.json  test.json
charmtests/lib/: anim.py  charm.py  digiview.py  highway.py  settings.py  song.py  utils.py
charmtests/lib/gamemodes/: fnf.py
charmtests/objects/: debug_log.py  menu.py  song.py  songmenu.py
charmtests/views/: mainmenu.py  menu.py  placeholder.py  song.py  songmenu.py  test.py  title.py
docs/: todo.md
tests/: Charm-Tests_test.py  hero_test.py  simfile_test.py  transparent_test.py
