[project]
name = "charm"
version = "0.0.1"
description = "Charm"
readme = "README.md"
authors = [
    { name = "DigiDuncan", email = "digiduncan@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">= 3.12"
dependencies = [
    "arcade>=3.0.0",
    "requests==2.28.2",
    "digiformatter==0.5.7.2",
    "pysubs2==1.6.0",
    "appdirs==1.4.4",
    "addict==2.4.0",
    "arrow==1.2.3",
    "nindex==1.0.0",
    "simfile==2.1.1",
    "pypresence==4.2.1",
    "pyogg==0.6.14a1",
    "ndjson==0.3.1",
    "emoji_data_python==1.5.0",
    "numpy>=1.26.4",
    "imgui-bundle>=1.3.0",
    "python-exports>=1.1.1",
    "pyperclip>=1.8.2",
]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest==7.2.1",
    "flake8==6.0.0",
    "autopep8==2.0.1"
]

[project.urls]
Homepage = "https://github.com/DigiDuncan/Charm"
Repository = "https://github.com/DigiDuncan/Charm.git"
Issues = "https://github.com/DigiDuncan/Charm/issues"

[project.scripts]
charm = "charm.main:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["charm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    "F",        # Pyflakes
    "E", "W",   # pycodestyle
    "C90",      # mccabe
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "ANN",      # flake8-annotations
    "ASYNC",    # flake8-async
    "BLE",      # flake8-blind-except
    "FBT",      # flake8-boolean-trap
    "B",        # flake8-bugbear
    "A",        # flake8-builtins
    "COM",      # flake8-commas
    "C4",       # flake8-comprehensions
    "DTZ",      # flake8-datetimez
    "ICN",      # flake8-import-conventions
    "LOG",      # flake8-logging
    "PIE",      # flake8-pie
    "T20",      # flake8-print
    "PYI",      # flake8-pyi
    "PT",       # flake8-pytest-style
    "RSE",      # flake8-raise
    "RET",      # flake8-return
    "SLF",      # flake8-self
    "PTH",      # flake8-use-pathlib
    "FIX",      # flake8-fixme
    "PGH",      # pygrep-hooks
    "RUF",      # Ruff-specific rules

]
ignore = [
    "ANN101",
    "ANN102",
    "ANN204",
    "B019",
    "C901",
    "COM812",
    "E501",
    "E741",
    "FBT003",
    "N817",
    "PIE790",
    "RET504",
    "RET505",
    "RET507",
    "RUF001",
    "RUF013",
    "PTH123",
    "C401"
]

