[metadata]
name = Charm-Tests
version = attr: Charm-Tests.__version__
description = Charm-Tests
long_description = file: README.md
long_description_content_type = text/markdown
author = DigiDuncan
author_email = digiduncan@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
keywords = 
project_urls =
    Source=https://github.com/digiduncan/Charm-Tests
    Tracker=https://github.com/digiduncan/Charm-Tests/issues

[options]
packages = find:
python_requires = >=3.10
zip_safe = yes
include_package_data = True
install_requires =
    arcade==2.6.10
    requests==2.27.1
    Pillow==9.0.0
    digiformatter==0.5.7.2
    pysubs2==1.4.0
    appdirs==1.4.4

[options.extras_require]
dev =
    pytest==6.2.5
    flake8==4.0.1
    autopep8==1.6.0

[options.entry_points]
console_scripts =
    Charm-Tests = Charm-Tests.main:main

[flake8]
ignore = E501,W503,E114,E117,E128
per-file-ignores =
    */__init__.py:F401,F403
    */gamemodes/*.py:E241
